part way through proofing

--- a/joint action and knowing others minds/interacting mindreaders.2.tex
+++ b/joint action and knowing others minds/interacting mindreaders.2.tex
@@ -531,15 +531,18 @@ may be able to identify the goal of the first action only.
 As this illustrates, ignorance about to which ends actions are means can be an obstacle to goal ascription.%
 Call this the problem of opaque means.
 
-We are not suggesting that no observer could ever identify the goal of any action she fails to recognise as a means to achieving that goal, of course.
-Of course opaque means are not in every case an insurmountable obstacle to goal ascription.
-This point is neither novel nor surprising:
-opaque means sometimes  deprive interpreters of evidence and so prevent goal ascription.
+We are not suggesting that no observer could ever identify the goal of any action she fails to recognise as a means to achieving that goal.
+Of course opaque means are not in every case an insurmountable obstacle to goal ascription, and
+they may only rarely be a problem for human adults with sophisticated social skills.
+Our point is neither novel nor surprising:
+opaque means sometimes  deprive mindreaders of evidence and so prevent goal ascription.
+This is more likely to happen where  goal ascribers lack sophistication in mindreading, communication and culture.
 
 Some of the most plausibly unique aspects of human cognition depend on our abilities to recognise the goals of novel behaviours involving tools, and of communicative gestures.
-If goal ascription is based on entirely observation 
-(so that the possibility of interaction is ignored),
-the problem of opaque means is likely to arise in both cases.
+The problem of opaque means is likely to arise in both cases
+if goal ascription is based  entirely on observation 
+(so that the possibility of interaction is ignored)
+and if the goal ascriber lacks sophisticated social skills.
 We have just seen an illustration of how the problem of opaque means arises where tools are used to unfamiliar ends.
 Relatedly, it is also likely to arise where actions involve multiple steps that do not form a familiar sequence, can occur in various orders and can be interspersed among other activities;
 as in preparing spirit from grain, for example.
@@ -590,13 +593,13 @@ this possibility illustrates how the problem of opaque means can be an obstacle 
 
 This, then, is the problem of opaque means:
 failures to identify to which ends actions are means can impair goal ascription.
-The problem is potentially a problem for interpreters given the standard, purely observational models of interpretation.
-It is not our intention to suggest that the problem of opaque means is a problem \emph{for models of interpretation}.
-Rather, it is a potential problem \emph{for interpreters}.
+The problem is potentially a problem for mindreaders given the standard, purely observational models of mindreading.
+It is not our intention to suggest that the problem of opaque means is a problem \emph{for models of mindreading}.
+Rather, it is a potential problem \emph{for mindreaders}.
 
 That the problem of opaque means exists
 is the first premise in our argument
-that models of interpretation based on pure observation are less powerful than models taking into account the possibility of interaction.
+that models of mindreading based on pure observation are less powerful than models taking into account the possibility of interaction.
 They are less powerful in this sense: 
 some routes to knowledge of the goals of actions are available only where a theory of the evidential basis of mindreading 
  takes the possibility of interaction into account.
@@ -617,6 +620,7 @@ we need to specify which types of interaction are relevant.
 That is the aim of this section.
 
 Let us stipulate that an outcome is a \emph{distributive goal} of two or more agents' actions just if two conditions are met.
+\label{df:distributive_goal}
 First, this outcome is a one to which each agent's actions are individually directed.
 Second, each agent's actions are related to the outcome in such a way that it is possible for all the agents (not just any agent, all of them together) to succeed in bringing about this outcome.
 
@@ -645,6 +649,20 @@ So this outcome is a distributive goal of our actions.
 %For some actions to have a distributive goal,
 %it is necessary that there be a single outcome (and not merely similar outcomes) to which they are directed.
 
+Note that our actions could have a distributive goal even without us each intending that we do something.
+As another variation on the turnip-pulling story,
+suppose that we each individually intend to 
+	contribute to pulling up the turnip or pull it up.
+Such intentions are agent neutral in this sense:
+relative to such an intention an agent 
+	could succeed by acting alone 
+and
+  she also could succeed by acting with unspecified other agents.
+Plausibly our having these intentions is sufficient for our actions to have a distributive goal.
+For in virtue of these intentions each of our actions is directed to the turnip's extraction,
+and this is an outcome relative to which it is possible that all of our actions succeed.
+
+
 In defining `distributive goal' we stipulated that it must be possible for all of the agents of actions with a distributive goal to succeed relative to that outcome.
 Consider a variation on our first turnip-pulling story.
 Instead of each intending that we pull up the turnip,
@@ -664,27 +682,17 @@ For our purposes all that matters is that there are distributive goals.
 And the existence of distributive goals follows from the possibility of each of us 
 intending that we pull up the turnip
 (rather than simply
-intending to pull it up).
-
-Note that our actions could have a distributive goal even without us each intending that we do something.
-As another variation on the turnip-pulling story,
-suppose that we each individually intend to 
-	contribute to pulling up the turnip or pull it up.
-Such intentions are agent neutral in this sense:
-relative to such an intention an agent 
-	could succeed by acting alone 
-and
-  she also could succeed by acting with unspecified other agents.
-Plausibly our having these intentions is sufficient for our actions to have a distributive goal.
-For in virtue of these intentions each of our actions is directed to the turnip's extraction,
-and this is an outcome relative to which it is possible that all of our actions succeed.
+intending to pull it up),
+and from the possibility of each of us
+intending to contribute to pulling up the turnip or pull it up.
 
 For two agents' actions to have a distributive goal it is sufficient that their actions constitute a joint action 
 (at least this is true on almost any account of joint action).%
 \footnote{
+\label{fn:joint_action_distributive_goal}
 We know of two definitions of joint action on which it is not straightforward that all joint actions involve distributive goals.
 One is provided 
- is provided by \citet[p.\ 366]{ludwig_collective_2007} and discussed in footnote \vref{fn:ludwig}; the other is due to 
+ is provided by \citet[p.\ 366]{ludwig_collective_2007} and quoted in footnote \vref{fn:ludwig}; the other is due to 
 \citet[p.\ 70]{Sebanz:2006yq}.
 According to Sebanz and colleagues' `working definition', 
 `joint action can be regarded as any form of social interaction whereby two or more individuals coordinate their actions in space and time to bring about a change in the environment'
@@ -694,32 +702,21 @@ On one way of reading this, the latter part is equivalent to `a change in the en
 On other standard accounts it is straightforward that joint action involves distributive goals.
 Compare 
 	\citet[pp.\ 329-31]{Bratman:1992mi},
-%	\citet[p.\ 40]{Butterfill:2011fk},
 	\citet[pp.\ 96-7]{Searle:1990em} and
 	\citet[pp.\ 168-9]{gilbert:2009shared}.
 }
 However, the converse does not hold.
-As this the turnip-pulling variation  indicates,
+As the first variation of the turnip-pulling story indicates,
 two or more agents' actions may have a distributive goal 
 even though the agents do not know about each others' intentions or actions.
 In fact our actions might have a distributive goal even though none of us is aware of this, or even of the others' existence. 
-(We shall refrain from illustrating this point by contriving a truly gigantic turnip and a completely dark, very windy night, but we are sure readers will be able to imagine how this would go.)
+(We shall refrain from illustrating this point by contriving a truly gigantic turnip and a completely dark, very stormy night; readers can probably guess how this would go.)
 One consequence of this is that 
 two or more agents' actions may have a distributive goal
 even though they are not engaged in joint action
 (at least not on any standard account of joint action).%
 \footnote{
-\label{fn:ludwig}
-According to 
-	 \citet[p.\ 366]{ludwig_collective_2007}, 
-`The concept of a joint action as such is just that of an event of which there are multiple agents.'
-Depending on what events are and what it is to be the agent of an event,
-it may turn out that,
-on Ludwig's definition,
-our actions' having a distributive goal 
-is sufficient for
-us to be engaged in joint action.
-However, other accounts of joint action have the consequence that each agent involved in a joint action must believe or know something about the jointness of her action.
+On many accounts of joint action, each agent involved in a joint action must believe, expect or know something about the jointness of her action.
 See 
 	\citet[p.\ 103]{Bratman:1993je}, %common knowledge
 	\citet[p.\ 40]{Butterfill:2011fk},
@@ -727,12 +724,22 @@ See
 	\citet[p. 56]{miller_social_2001} % requires that each agent believes her actions are interdependent with the other agent's.
 	and
 	\citet[p.\ 361]{Roth:2004ki}. %: `each participant ... can answer the question of what he is doing or will be doing by saying for example ``We are walking together'' or ``We will/intend to walk together.''' 
+Exceptions include  \citet{pacherie_framing_2011} and \citet{ludwig_collective_2007}.
+\label{fn:ludwig}
+According to Ludwig,
+`The concept of a joint action as such is just that of an event of which there are multiple agents' (\citeyear[p.\ 366]{ludwig_collective_2007}).
+Depending on what events are and what it is to be the agent of an event,
+it may turn out that,
+on Ludwig's definition,
+our actions' having a distributive goal 
+is sufficient for
+us to be engaged in joint action.
 }
 
 
 The notion of a distributive goal is a 
 narrowly technical one.
-In introducing this notion by stipulation we are not aiming to match anyone's intentions about anything.
+In introducing this notion by stipulation we are not aiming to match anyone's intuitions about anything.
 What matters for now is just that the definition is theoretically coherent and that it is possible for actions to have distributive goals.
 Our aim in introducing distributive goals 
  is to capture a minimal requirement on the sort of interactions 
@@ -745,22 +752,22 @@ available only to interacting mindreaders.
 %which would be unavailable  were  they mere observers.
 
 
-\section{Your-goal-is-my-goal: a route to knowledge}
+\section{Your-goal-is-my-goal}
 \label{sec:your_goal_is_my_goal}
 If a mindreader is able to interact with her targets,
 if she is not limited to merely observing them,
 how might this provide her with a route to knowledge of the goals of their actions?
 The answer hinges on interactions involving distributive goals
-(see \vref{sec:joint_action}).
+(as defined \vpageref{df:distributive_goal}).
 
 Here is an intuitive idea that doesn't quite work:
 if a mindreader is engaged in an interaction with her target that involves a distributive goal, 
-it may be easy for the interpreter to know what the goal of her target's actions is because this goal is the goal of her own actions.
+it may be easy for the mindreader to know what the goal of her target's actions is because this goal is the goal of her own actions.
 So if she knows the goal of her own actions and she knows that she is engaged with her target in an interaction involving a distributive goal,
 then she already knows what the goal of her target's actions are.
-%Roughly speaking, the interpreter can reason about her target thus: your goal is my goal.
+%Roughly speaking, the mindreader can reason about her target thus: your goal is my goal.
 
-Of course this intuitive idea won't work as it stands.  
+Of course this intuitive idea is no use it stands.  
 For the inference it captures relies on the premise that the mindreader and her target are engaged in actions with a distributive goal.
 But for the mindreader to know this premise it seems she must   already know which goal her target's actions are directed to.
 
@@ -769,14 +776,13 @@ For there are various cues which signal that one agent is prepared to engage in 
 and joint actions involve distributive goals.  
 \label{twin_pram}
 Seeing a stranger with the haggard look of a new parent struggling to get his twin pram on to the bus, you grab the front wheels and make eye contact, raising your eyebrows and smiling.
-(The noise of the street rules out talking, 
-and you can barely speak the local language anyway.)   
+(The noise of the street rules out talking.)   
 In this way you signal that you are about to act jointly with the stranger, to lift the pram with him.   
 Since the stranger is fully committed to getting his pram onto the bus,
 he knows what the sole goal of his own actions will be.
 But he also knows that you will engage in joint action with him,
 which means that your actions and his actions will have a distributive goal.
-This enables him to infer the goal of your imminent actions: 
+This may enable him to infer the goal of your imminent actions: 
 your goal is his goal, to get the pram onto the bus.
 
 Our suggestion, then, is that the following inference characterises a route to knowledge of others’ goals:
@@ -784,7 +790,7 @@ Our suggestion, then, is that the following inference characterises a route to k
 \begin{enumerate}
 \item You are willing to engage in some joint action\footnote{
 We leave open the issue of how joint action is to be characterised subject only to the 
-requirement that all joint actions must involve distributive goals.
+requirement that all joint actions must involve distributive goals (see further footnote \vref{fn:joint_action_distributive_goal}).
 Attempts to characterise joint action in ways relevant to explaining development include
 	\citet{Tollefsen:2005vh},
 	\citet{Carpenter:2009wq},
@@ -831,7 +837,7 @@ The existence of such indicators shows that knowing the first  premise of the ab
 Not everything needs to rest on indicators, however.
 It is sometimes possible to know that others are willing to engage in joint action with you even without relying on such indicators.  
 Thanks to widespread dispositions to act jointly, in some situations it is reasonable to take for granted that others are willing to act jointly.  
-For example, this is often so for children surrounded by family or familiar adults who are struggling with a coat.  
+For example, this is often so for children struggling with a coat while surrounded by family or familiar adults.  
 And in at least some subcultures people using public transport can reasonably take for granted that, within limits, those around them will act jointly with them when the need is clear.
 Of course dispositions to engage in joint action may vary between cultural groups and situations.
 This may be fatal for the peripatetic cosmopolitan,
@@ -844,7 +850,7 @@ These background conditions include the other having largely true beliefs concer
 After all, the other agent may be willing to act jointly with you while being entirely mistaken about the goals to which your actions will be directed.
 Where this happens, the premises of the inference might be true but the conclusion false.
 (We return to this point in section \vref{sec:false_belief}.)  
-But there are situations in which it is reasonable  to ignore  this possibility, as for instance when stereotypes, conventions or simplicity should and do make the goal of your actions obvious to the other agent.
+But in some situations there is no requirement  to consider  this possibility, as for instance when stereotypes, conventions or simplicity should and do make the goal of your actions obvious to the other agent.
 Given the right conditions,
 that others are willing to engage in joint action with you 
 is sometimes sufficient reason to hold that
@@ -855,28 +861,27 @@ In short, then, the two requirements for the your-goal-is-my-goal inference to c
 In some cases it is possible to know the premises without already knowing the conclusion thanks to natural expressions of willingness to engage in joint action.  
 And knowing the premises sometimes puts one in a position to know the conclusion thanks to the fact that, when things are going well, another's willingness to engage in joint action with you can be based on an accurate assessment of the goals of your actions.
 
+In principle,
+exploiting your-goal-is-my-goal does not require actually being in a position to interact with the target of goal ascription.
+It is sufficient (and would be necessary but for some special cases) to be taken by the target to be in a position to interact. 
+Our concern, however,
+is with cases that are likely to be important for understanding
+development or evolution.
+This motivates a focus on goal ascribers of limited sophistication
+who lack both deep insight into others' minds and fully-fledged communicative abilities.
+Such individuals are unlikely to be able to contrive or exploit situations in which they only appear to be in a position to interact with their targets.
+When we come to applications of your-goal-is-my-goal, the relevant cases will be those 
+in which a goal ascriber is manifestly in a position to interact with her target.
+
+
 The your-goal-is-my-goal route to knowledge is characterised by an inference.  
 However, exploiting this route to knowledge may not require actually making the inference or knowing the premises.  
 Depending on what knowing requires,
 it may be sufficient to believe the conclusion because one has reliably detected a situation in which the premises of the inference are true;
 it may not be necessary to think of this situation as a situation where the premises are true,
 nor even to be able to think of it in this way.
-
-In principle,
-exploiting your-goal-is-my-goal does not require actually being in a position to interact with the target of goal ascription.
-It is sufficient (and would be necessary but for some special cases) to be taken by the target to be in a position to interact. 
-Our concern, however,
-is with cases that are likely to be important for understanding
-development or evolution (and ideally both).
-This motivates a focus on goal ascribers of limited sophistication
-who lack both deep insight into others' minds and fully-fledged communicative abilities.
-Such interpreters are unlikely to be able to contrive or exploit situations in which they only appear to be in a position to interact with their targets.
-When we come to applications of your-goal-is-my-goal, the relevant cases will be those 
-in which a goal ascriber is manifestly in a position to interact with her target.
-
-
 Our aim in identifying the your-goal-is-my-goal inference is not to 
-defend a detailed hypothesis about  mechanisms and processes supporting mindreading.
+defend a detailed hypothesis about  mechanisms of mindreading.
 Instead our present concerns are limited to a normative question about the evidential basis of mindreading.
 The your-goal-is-my-goal inference matters
 not because it describes exactly how anyone actually assigns goals (maybe it doesn't)
@@ -896,18 +901,24 @@ Showing how your-goal-is-my-goal makes  avoiding this problem possible is a way 
 In our earlier example 
 a novice parent is struggling to lift his heavy twin pram onto a bus when a stranger joins in and they lift the pram together (\vpageref*{twin_pram}).
 Suppose the stranger starts tipping the pram in a way that the inexperienced parent fails to recognise as a means, indeed the only means, of getting it onto the bus.
-Outside the context of joint action this might give the parent sufficient evidence to reject the idea that the goal of the stranger's actions is to get the pram onto this bus.
-Or suppose the stranger starts by pulling the pram away from the bus in order to better position it for entry,
-and the novice parent does not realise that this is necessary.
 Outside the context of joint action, 
-his evidence might on balance support the conclusion that the goal of the stranger's actions is to take the pram off the bus.
+failure to realise that the action is a means to getting the pram onto the bus
+might have the consequence that
+the parent's evidence on balance supports the conclusion that the goal of the stranger's actions is to take the pram off the bus.
 (Perhaps the stranger is impatient to get onto the bus herself.)
+%Or suppose the stranger starts by pulling the pram away from the bus in order to better position it for entry,
+%and the novice parent does not realise that this is necessary.
+%Outside the context of joint action, 
+%his evidence might on balance support the conclusion that the goal of the stranger's actions is to take the pram off the bus.
+%(Perhaps the stranger is impatient to get onto the bus herself.)
 But in the context of joint action,
 your-goal-is-my goal gives the parent  additional evidence for supposing that, 
 even though the stranger's actions do not seem to him to be a means to getting the pram onto the bus, 
 this really is the goal of her actions.
-Of course this additional evidence will not necessarily trump   other evidence.
-But it does provide a possible way around the problem of opaque means by providing evidence for goal ascriptions that is independent of a goal ascriber's understanding of which ends actions are means to.
+Of course this additional evidence will not always outweigh   other evidence.
+But it will do sometimes, and this is all we need.
+We have identified evidence for goal ascription that is available independently of a goal ascriber's knowing which ends actions are means to, and we have illustrated how this will sometimes enable mindreaders to escape the problem of opaque means
+ 
 
 We saw earlier that the problem of opaque means  may impair goal ascription where actions involve novel uses for tools.
 How could your-goal-is-my-goal mitigate the problem in such cases?
@@ -943,7 +954,14 @@ thereby rely on their targets' having correctly identified the goals of their ac
 Of course this is sometimes a reason not to rely on your-goal-is-my-goal.
 But where the target understands relevant means-ends relations,
 such as actions involving novel tools,
-the your-goal-is-my-goal route to knowledge of other's goals may sometimes be the only option.
+the your-goal-is-my-goal route to knowledge of others' goals may sometimes be the only option.
+
+Here we have a first illustration of how
+interacting mindreaders can exploit reciprocity 
+without relying on ascriptions of higher-order mental states.
+The mindreader's knowledge of the goal of her target's actions depends on the target's knowledge of the goal of the mindreader's actions.
+What makes this dependence possible is not each knowing that the other knows something about the goal of her actions;
+ it is  the actual or apparent  possibility of interaction.
 
 The distant promise of all this is that 
 understanding how interaction widens the evidential basis for goal ascription and mindreading more generally 
@@ -980,7 +998,7 @@ Note that although our discussion borrows an experimental paradigm,
 our aim is not to argue for empirical hypotheses about chimpanzee social cognition.
 Our aim is only to argue for the theoretical significance of interaction for mindreading by showing 
 that your-goal-is-my-goal
-could \emph{in principle} enable
+could {in principle} enable
 individuals to make the transition 
 from
  a simple understanding of goals
@@ -1077,7 +1095,7 @@ infants can form a word-object association before they can comprehend communicat
 As we saw, 
 outside the context of joint action,
 merely associating a gesture with its referent falls short of being able to respond appropriately.
-But if an interpreter supposes that her target is willing to engage in joint action with her,
+But if a mindreader supposes that her target is willing to engage in joint action with her,
 then she may infer that the goal of her target's action is her goal
 and so be motivated to treat the thing associated with a communicative gesture as relevant to the goal of her own actions.
 This will reliably (but not always) enable her to respond appropriately to the communicative gesture even without understanding it as a communicative gesture.
@@ -1087,7 +1105,7 @@ she may be in a position to realise, further, that the same tool can be used in 
 This, in barest outline, is 
 how
 possessing abilities to engage in joint action
-mean that 
+means that 
 an individual with an ability to ascribe simple goals only and no understanding of communicative intent
 might 
 nevertheless reliably respond appropriately to some communicative gestures,
@@ -1111,13 +1129,12 @@ the teleological stance
 }
 Of course we have only argued that this transition is theoretically possible;
 we have not attempted to defend any hypothesis about 
-anything's evolution or development.
-Our point is just to illustrate one of several ways in which
-interaction may matter for mindreading.
-Widening the evidential basis for goal ascription
-to include evidence available only to mindreaders actually or apparently capable of joint action with their targets
-makes possible 
-novel hypotheses about the emergence, in evolution or development (and perhaps both), of communicative gestures.
+anything's actual evolution or development.
+%Our point is just to illustrate one of several ways in which interaction may matter for mindreading.
+But widening the evidential basis for goal ascription
+to include evidence available only to mindreaders actually or apparently capable of interacting with their targets
+does reveal the coherence of  
+novel hypotheses about a role for interaction in the emergence  of communicative gestures.
 
 %This is one illustration of how capacities for joint action, even very simple forms of joint action, might be relevant to explaining the development or evolution of richer forms of cultural cognition.
 
@@ -1132,7 +1149,7 @@ which avoids the problem of opaque means.
 There is another reason for supposing that interaction matters for goal ascription and (at least indirectly) for mindreading more generally.
 To introduce this reason we must first describe another problem affecting goal ascription, the problem of false belief.
 
-Recall that the problem of opaque means occurs when interpreters  must rely entirely on observation and cannot identify to which ends actions are means 
+Recall that the problem of opaque means occurs when mindreaders  must rely entirely on observation and cannot identify to which ends actions are means 
 (see section \vref{sec:opaque_means}).
 A yet more familiar problem affecting goal ascription 
 arises from the interdependence of beliefs and goals.
@@ -1155,12 +1172,12 @@ is to retrieve the owl.
 As this illustrates,
 differences in belief between observers and protagonists can 
 impair goal ascription
-when the interpreter is unaware of those differences.
+when the goal ascriber is unaware of those differences.
 Call this the problem of false belief.
 
 The your-goal-is-my-goal
 route to knowledge
-sometimes enables interpreters to avoid the problem of false belief.
+sometimes enables mindreaders to avoid the problem of false belief.
 To illustrate consider a counterfactual alternative to the above example.
 Ayesha dislikes the owl and is concerned with retrieving the cat.
 As you reach for the north box,
@@ -1191,56 +1208,56 @@ may enable
 
 In short, then, abilities to engage in joint action open a route to knowledge of the goals of other agents' actions which does not depend on the goal ascriber knowing what her target believes even when their beliefs relevantly differ.
 This is not because abilities to engage in joint action provide a way to avoid the problem of false beliefs altogether.
-Rather they shift the burden of resolving the problem of false belief from an interpreter to her target.
-This is potentially valuable for interpreters who have limited insight into their targets' beliefs,
+Rather they shift the burden of resolving the problem of false belief from a goal ascriber to her target.
+This is potentially valuable for those who have limited insight into their targets' beliefs,
 or who lack abilities to track differences in belief altogether.
 
-On a purely observational model of mindreading,
-it seems inevitable,
-given that observed behaviours will be consistent with many different ascriptions of beliefs and goals,
-that a goal ascriber who was unable to track others' beliefs 
-would often have to proceed as if there were no relevant differences in beliefs.%
-\footnote{
-Compare \citet[p.\ 49]{Bennett:1976rg}.  For a related argument concerning beliefs and desires rather than beliefs and goals, see 
-	\citet[p.\ 17]{Davidson:1984pr}
-%what can fairly be treated as evidence for any one of the propositional attitudes can count as evidence only if untested assumptions are made about others.”  [1984d, p. 17]
-and
-	(\citeyear[pp.\ 159--167]{Davidson:1984wh}).
-%`This creates a problem, for it means that behaviour, which is the main evidential basis for attributions of belief and desire, is reckoned the result of two forces less open to public observation. Thus where one constellation of beliefs and desires will rationalize an action, it is always possible to find a quite different constellation that will do as well. Even a generous sample of actions threatens to leave open an unacceptably large number of alternative explanations.'
-%`of course it cannot be assumed that speakers never have false beliefs. Error is what gives belief its point. We can, however, take it as given that most beliefs are correct. The reason for this is that a belief is identified by its location in a pattern of beliefs; it is this pattern that determines the subject matter of the belief, what the belief is about. Before some object in, or aspect of, the world can become part of the subject matter of a belief (true of false) there must be endless true beliefs about the subject matter. False beliefs tend to undermine the identification of the subject matter; to undermine, therefore, the validity of a description of the belief as being about that subject.'
-}
-So on a purely observational model of interpretation
-there may fail to be any straightforward way in which
-the need to track differences in belief 
-could become apparent to a mindreader who did not already understand that beliefs can be false.
-Things are different
-if we extend our model of mindreading
-to take into account the possibility of interaction.
-We can then see how
-a goal ascriber who is unable to track others' beliefs
-will encounter anomalies.
-For some differences in belief 
-(the mere fact of such differences, not anyone's awareness of them)
-will mean that
- ordinary, purely observational routes to knowledge will result in ascribing one goal
- whereas
- exploiting your-goal-is-my-goal would result in a ascribing a different goal.
-That is, the evidence available to a goal ascriber may inexplicably support two incompatible ascriptions. 
-In this way,
-differences in belief have the potential to cause puzzling anomalies
-even before a mindreader is able to track such differences.
-This 
-raises the possibility
-that abilities to engage in joint action
-may play a role in explaining how  awareness of belief emerges.%
-\footnote{
-Some researchers have suggested that awareness of belief is innate in humans
-\citep{Leslie:1998nq,Leslie:2005ef,Baillargeon:gx},
-although this view is currently controversial
-\citep{Apperly:2009ju,Ruffman:2005yl}.
-But whether or not the emergence in development of awareness of belief stands in need of explanation,
-few would doubt that its emergence in evolution does need explaining.
-}
+%On a purely observational model of mindreading,
+%it seems inevitable,
+%given that observed behaviours will be consistent with many different ascriptions of beliefs and goals,
+%that a goal ascriber who was unable to track others' beliefs 
+%would often have to proceed as if there were no relevant differences in beliefs \citep[compare][p.\ 49]{Bennett:1976rg}. 
+%%\footnote{
+%%Compare \citet[p.\ 49]{Bennett:1976rg}.  For a related argument concerning beliefs and desires rather than beliefs and goals, see 
+%%	\citet[p.\ 17]{Davidson:1984pr}
+%%%what can fairly be treated as evidence for any one of the propositional attitudes can count as evidence only if untested assumptions are made about others.”  [1984d, p. 17]
+%%and
+%%	(\citeyear[pp.\ 159--167]{Davidson:1984wh}).
+%%%`This creates a problem, for it means that behaviour, which is the main evidential basis for attributions of belief and desire, is reckoned the result of two forces less open to public observation. Thus where one constellation of beliefs and desires will rationalize an action, it is always possible to find a quite different constellation that will do as well. Even a generous sample of actions threatens to leave open an unacceptably large number of alternative explanations.'
+%%%`of course it cannot be assumed that speakers never have false beliefs. Error is what gives belief its point. We can, however, take it as given that most beliefs are correct. The reason for this is that a belief is identified by its location in a pattern of beliefs; it is this pattern that determines the subject matter of the belief, what the belief is about. Before some object in, or aspect of, the world can become part of the subject matter of a belief (true of false) there must be endless true beliefs about the subject matter. False beliefs tend to undermine the identification of the subject matter; to undermine, therefore, the validity of a description of the belief as being about that subject.'
+%%}
+% So on a purely observational model of mindreading
+%there may fail to be any straightforward way in which
+%the need to track differences in belief 
+%could become apparent to a mindreader who did not already understand that beliefs can be false.
+%Things are different
+%if we extend our model of mindreading
+%to take into account the possibility of interaction.
+%We can then see how
+%a goal ascriber who is unable to track others' beliefs
+%will encounter anomalies.
+%For some differences in belief 
+%(the mere fact of such differences, not anyone's awareness of them)
+%will mean that
+% ordinary, purely observational routes to knowledge will result in ascribing one goal
+% whereas
+% exploiting your-goal-is-my-goal would result in a ascribing a different goal.
+%That is, the evidence available to a goal ascriber may inexplicably support two incompatible ascriptions. 
+%In this way,
+%differences in belief have the potential to cause puzzling anomalies
+%even before a mindreader is able to track such differences.
+%This 
+%raises the possibility
+%that abilities to engage in joint action
+%may play a role in explaining how  awareness of belief emerges.%
+%\footnote{
+%Some researchers have suggested that awareness of belief is innate in humans
+%\citep{Leslie:1998nq,Leslie:2005ef,Baillargeon:gx},
+%although this view is currently controversial
+%\citep{Apperly:2009ju,Ruffman:2005yl}.
+%But whether or not the emergence in development of awareness of belief stands in need of explanation,
+%few would doubt that its emergence in evolution does need explaining.
+%}
 
 
 
@@ -1253,10 +1270,10 @@ open to interacting mindreaders.
 In pursuing this aim we focused on interactions which are joint actions.
 Our suggestion was this.
 Where a mindreader recognizes that her target is willing to engage in joint action
-and is unwilling to change which goals her own actions will be directed to,
+and where the mindreader is unwilling to change which goals her own actions will be directed to,
 she may be in a position to know
-that the goals of her target's actions will be her goals.
-This in outline is the `your-goal-is-my-goal' route to  knowledge (see further section \vref{sec:your_goal_is_my_goal}).
+that the goals of her target's actions will be the goals of her own actions.
+This in outline is the `your-goal-is-my-goal' route to  knowledge (see  section \vref{sec:your_goal_is_my_goal}).
 
 
 %***Return to the leading theories?
@@ -1319,7 +1336,7 @@ on how
  sophisticated forms of cognition
  emerge from
  conceptually and cognitively undemanding forms of interaction.
-A culture of tool use,
+Take cultures of tool use,
 	the flexible use of communicative gestures,
 	or insight into interpersonal differences in belief and other mental states:
 if any or all of these 
@@ -1329,9 +1346,11 @@ And one small step towards acquiring this knowledge might just be
 understanding how interacting mindreaders 
 could 
 	come to know things 
-	and
-	encounter anomalies
-which they might not be able to know or encounter if they were mere observers.
+%	and
+%	encounter anomalies
+which they might not be able to know 
+%or encounter
+ as mere observers.
 % matters because it enables us to better understand the evidential basis of mindreading---%
 %and it might just also matter because it plays a role in demonstrating the theoretical coherence of hypotheses about mindreading's emergence.
 
